# Template-GLFW

./: CMakeLists.txt
src/: IBO.cpp  MainScene.cpp  main.cpp
